<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margen_pantalla">

    <LinearLayout
        android:id="@+id/tarjetaAdoptadas"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginBottom="30dp"
        android:background="@color/reporte"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/espacio_grande">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/icono_perro"
            android:src="@drawable/dog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_normal"
            android:gravity="center"
            android:text="@string/reporte_adoptadas"
            android:textColor="@color/blanco"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tarjetaEnAdopcion"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:background="@color/reporte"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/espacio_grande">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/icono_gato"
            android:src="@drawable/cat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_normal"
            android:gravity="center"
            android:text="@string/reporte_en_adopcion"
            android:textColor="@color/blanco"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
